@@ -1,3 +1,9 @@
+Fri Jun 24 14:36:02 2005  Cassia Tatibana  <cassia@dre.vanderbilt.edu>
+
+	* DAnCE/ciao/CIAO_common.h: 
+
+	  Added definition for CIAO_TRACE.
+
 Fri Jun 24 14:21:31 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * docs/tutorial/Hello/hello_exec.cpp:
